--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8217,11 +8217,8 @@ a {
   min-height: 100vh;
 }
 .main-logo-bg{
-    background: url("../img/common/4.avif");
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  min-height: 100vh;
+    width: 50%;
+    height: auto;
 }
 .font-upper{
     text-transform: uppercase;
@@ -8237,4 +8234,20 @@ a {
 }
 .w-30{
     width: 30%;
+}
+.bg-white{
+    background-color: rgba(255, 255, 255, 0.4);
+    color: white;
+}
+.intro-text{
+    color: white;
+    text-align: center;
+}
+.intro-title{
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+}
+.flex{
+    display: flex;
 }
