--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8217,7 +8217,7 @@ a {
   min-height: 100vh;
 }
 .main-logo-bg{
-    width: 50%;
+    width: 50% !important;
     height: auto;
 }
 .font-upper{
@@ -8228,9 +8228,35 @@ a {
 }
 .auto{
     margin: auto;
+    text-align: center;
+    justify-content: center;
 }
 .w-70{
     width: 70%;
+}
+.w-10{
+    width: 10%;
+}
+.w-20{
+    width: 20%;
+}
+.w-40{
+    width: 40%;
+}
+.w-50{
+    width: 50%;
+}
+.w-60{
+    width: 60%;
+}
+.w-80{
+    width: 80%;
+}
+.w-90{
+    width: 90%;
+}
+.w-100{
+    width: 100%;
 }
 .w-30{
     width: 30%;
@@ -8238,6 +8264,7 @@ a {
 .bg-white{
     background-color: rgba(255, 255, 255, 0.4);
     color: white;
+    min-height: 100%;
 }
 .intro-text{
     color: white;
