--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8307,4 +8307,10 @@ a {
     color: #4a4a45;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
     padding: 20px;
+    font-family: "Lato";
+    font-weight: bold;
+}
+.sub-data{
+    font-size: 15px;
+    font-weight: normal ;
 }
