--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8287,7 +8287,7 @@ a {
 .mt-30{
     margin-top: 30px;
 }
-.img-group img{
+.img-group p{
     width: 60%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
 }
