--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8317,9 +8317,12 @@ a {
 .js-topAbout__text{
     width: 70%;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 730px) {
   .mt-20{
     margin-top:10px;
+  }
+  .res-w-100{
+    width: 100%;
   }
 }
 .topProducts__solutionImg img{
