--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8333,6 +8333,9 @@ a {
   .pb-0{
     padding-bottom: 0px !important;
   }
+  .blog{
+    display: none;
+  }
 }
 .topProducts__solutionImg img{
     top: 50vh !important;
