--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8358,3 +8358,26 @@ a {
 .image-group img{
   width: 100% !important;
 }
+.topAbout__text01{
+  width: 338rem !important;
+}
+.topAbout__text02{
+  width: 338rem !important;
+
+}
+.topAbout__text03{
+  width: 338rem !important;
+  
+}
+.topAbout__text04{
+  width: 338rem !important;
+  
+}
+.topAbout__text05{
+  width: 338rem !important;
+  
+}
+.topAbout__text07{
+  width: 338rem !important;
+  
+}
