--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -456,7 +456,7 @@ header {
   margin-left: 0;
   text-align: center;
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
   border-top: 1.2rem solid #b8cade;
   border-left: 1.2rem solid #b8cade;
